<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:textSize="44sp"
        android:text="@string/app_name"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom">
        <TextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:padding="16dp"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/scores_button"
            android:layout_toRightOf="@+id/scores_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            tools:text="Welcome, Fulano"/>
        <Button
            android:id="@+id/scores_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="start|bottom"
            android:text="@string/scores"/>
    </RelativeLayout>
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/play_hard_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/hard_mode"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/play_easy_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/easy_mode"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/help_button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/help_button"
            android:textSize="20sp"/>
    </LinearLayout>
</FrameLayout>