<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ufpe.cin.nmf2.vasegame.MenuActivity"
    android:baselineAligned="false"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_one"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/fulfill"
            android:layout_width="80dp"/>
        <Button
            android:id="@+id/button_two"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fulfill"
            />

        <Button
            android:id="@+id/button_tree"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/fulfill"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/max_81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="15sp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            />
        <TextView
            android:text="@string/max_51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"/>
        <TextView
            android:text="@string/max_31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="15sp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggle_button_one"
            android:layout_width="90dp"
            android:layout_height="105dp"
            android:layout_gravity="start"
            android:background="@mipmap/buket"
            />
        <ToggleButton
            android:id="@+id/toggle_button_two"
            android:layout_width="90dp"
            android:layout_height="105dp"
            android:layout_gravity="center"
            android:background="@mipmap/buket"
            />
        <ToggleButton
            android:id="@+id/toggle_button_three"
            android:layout_width="90dp"
            android:layout_height="105dp"
            android:layout_gravity="end"
            android:background="@mipmap/buket"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_view_one"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:textSize="32sp"
            tools:text="NN"
            />
        <TextView
            android:id="@+id/text_view_two"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="32sp"
            tools:text="NN"/>
        <TextView
            android:id="@+id/text_view_three"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:textSize="32sp"
            tools:text="NN"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/congrats_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:textSize="32sp"
            android:textColor="@color/colorPrimaryDark"
            tools:text="Congratulations!"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            style="?android:attr/buttonBarButtonStyle"
            >
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_gravity="bottom|start"
                />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="bottom|start"
                />
        </LinearLayout>
        <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="10dp"
        android:textSize="32sp"
        android:textColor="@color/colorPrimaryDark"
        tools:text="NN:NN:NN"/>
    </FrameLayout>
</LinearLayout>
